# rest_http_ssl_fastapi

./: .gitignore  README.md  pyproject.toml
src/restapi/: main.py
tests/restapi/: test_main.py
